# credit-risk-monitoring

./: LICENSE  README.md  docker-compose.yml  main.py  monitoring.ipynb  pyproject.toml
model/: modelo_credito.pkl
