[project]
name = "credit-risk-monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "evidently==0.7.15",
    "ipykernel>=7.1.0",
    "jupyter-client>=8.6.3",
    "lightgbm>=4.6.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]
